fix alignment in label

--- a/blocks/shared-styles/_children/promo-image/styles.scss
+++ b/blocks/shared-styles/_children/promo-image/styles.scss
@@ -12,7 +12,7 @@
       font-style: normal;
       line-height: 1.5;
       letter-spacing: normal;
-      height: 16px;
+      height: 18px;
     }
   }
 }
